<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/orange"
        >
        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/icon_back"
            />
    </Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.view.PizzaDetailFragment">

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                android:contentDescription="@string/image_detail"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Margarita"
                />

            <TextView
                android:id="@+id/price_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:textColor="@color/black"
                android:text="@string/symbol_price"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/price_symbol"
                app:layout_constraintTop_toTopOf="@+id/price_symbol"
                app:layout_constraintBottom_toBottomOf="@+id/price_symbol"
                tools:text="300"
                />

            <View
                android:id="@+id/dividerTop"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/gray"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/taste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/gusto"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerTop"
                app:layout_constraintBottom_toTopOf="@id/list_checkbox"
                />

            <ImageView
                android:id="@+id/iconUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:visibility="visible"
                android:contentDescription="@string/icon_up"
                app:layout_constraintTop_toTopOf="@+id/taste"
                app:layout_constraintBottom_toBottomOf="@+id/taste"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/taste"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="visible"
                >

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/panceta"
                    android:textColor="@color/black"
                    android:onClick="onCheckboxClicked"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aceituna"
                    android:textColor="@color/black"
                    android:onClick="onCheckboxClicked"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintTop_toBottomOf="@id/checkbox1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/jamon"
                    android:textColor="@color/black"
                    android:onClick="onCheckboxClicked"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintTop_toBottomOf="@id/checkbox2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <CheckBox
                    android:id="@+id/checkbox4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/anana"
                    android:textColor="@color/black"
                    android:onClick="onCheckboxClicked"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintTop_toBottomOf="@id/checkbox3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <CheckBox
                    android:id="@+id/checkbox5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/huevo"
                    android:textColor="@color/black"
                    android:onClick="onCheckboxClicked"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintTop_toBottomOf="@id/checkbox4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <CheckBox
                    android:id="@+id/checkbox6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lechuga"
                    android:textColor="@color/black"
                    android:onClick="onCheckboxClicked"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintTop_toBottomOf="@id/checkbox5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <CheckBox
                    android:id="@+id/checkbox7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pepino"
                    android:textColor="@color/black"
                    android:onClick="onCheckboxClicked"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintTop_toBottomOf="@id/checkbox6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/dividerBottom"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            android:background="@color/white"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_orange"
                >

                <ImageView
                    android:id="@+id/symbol_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_min_minus_icon"
                    android:contentDescription="@string/symbol_minus"
                    android:clickable="true"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/text_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    tools:text="1"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintTop_toTopOf="@+id/symbol_minus"
                    app:layout_constraintStart_toEndOf="@+id/symbol_minus"
                    app:layout_constraintBottom_toBottomOf="@+id/symbol_minus"
                    app:layout_constraintEnd_toStartOf="@+id/symbol_add"
                    />

                <ImageView
                    android:id="@+id/symbol_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_plus_icon"
                    android:contentDescription="@string/symbol_add"
                    android:clickable="true"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="@+id/text_quantity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/text_quantity"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/button_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_white"
                >

                <TextView
                    android:id="@+id/chip4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="1"
                    android:background="@drawable/custom_chip"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/add"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintTop_toTopOf="@+id/chip4"
                    app:layout_constraintBottom_toBottomOf="@+id/chip4"
                    app:layout_constraintStart_toEndOf="@+id/chip4"
                    app:layout_constraintEnd_toStartOf="@+id/button_symbol"
                    />

                <TextView
                    android:id="@+id/button_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/symbol_price"
                    app:layout_constraintTop_toTopOf="@+id/button_add"
                    app:layout_constraintBottom_toBottomOf="@+id/button_add"
                    app:layout_constraintEnd_toStartOf="@+id/button_price"
                    />

                <TextView
                    android:id="@+id/button_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginEnd="20dp"
                    tools:text="100"
                    app:layout_constraintTop_toTopOf="@+id/button_symbol"
                    app:layout_constraintBottom_toBottomOf="@+id/button_symbol"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>