<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.PizzaListFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textColor="@color/white"
        />
    </Toolbar>

    <EditText
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_background"
        android:hint="Search..."
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"/>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:background="@color/white"
        android:visibility="visible"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_orange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/chip4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="1"
                android:background="@drawable/custom_chip"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/button_pedido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:text="@string/btn_pedido"
                app:layout_constraintTop_toTopOf="@+id/chip4"
                app:layout_constraintBottom_toBottomOf="@+id/chip4"
                app:layout_constraintStart_toEndOf="@+id/chip4"
                app:layout_constraintEnd_toStartOf="@+id/button_symbol" />

            <TextView
                android:id="@+id/button_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/symbol_price"
                app:layout_constraintTop_toTopOf="@+id/button_pedido"
                app:layout_constraintBottom_toBottomOf="@+id/button_pedido"
                app:layout_constraintEnd_toStartOf="@+id/button_price" />

            <TextView
                android:id="@+id/button_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                tools:text="100"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toTopOf="@+id/button_symbol"
                app:layout_constraintBottom_toBottomOf="@+id/button_symbol"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>